<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Hidden Campus</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="input_password_label">Password</string>
    <string name="input_username">Username</string>
    <string name="btn_forgot_password">Forgotten Password</string>
    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="label_email_completion">\@sussex.ac.uk</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="secret">password</string>
    <string name="username">test@sussex.ac.uk</string>
    <string name="login_error_msg">Username and Password mismatch.</string>
    <string name="label_register_confirm_username">Please confirm tour username</string>
    <string name="hint_input_username">username</string>
    <string name="label_register_password">Please enter your password</string>
    <string name="hint_password_register">password</string>
    <string name="label_register_password_confirmation">Please confirm your password</string>
    <string name="label_register_username">Please enter your Sussex email address</string>
    <string name="hint_password_confirmation">password confirmation</string>
    <string name="label_main_username">Username</string>
    <string name="menu_item_saved">Saved Events</string>
    <string name="menu_item_find_events">Find Events</string>
    <string name="label_create_event">Create Event</string>
    <string name="menu_item_past_events">Past Events</string>
    <string name="menu_item_view_map">View Map</string>
    <string name="menu_item_notifications">Notifications</string>
    <string name="btn_logout">Logout</string>
    <string name="accessibility_find_event">magnifier</string>
    <string name="title_activity_view_event">View Event</string>
    <string name="label_location_view_event">Location</string>
    <string name="label_date_view_event">Date: Tomorrow.</string>
    <string name="title_activity_event_list">EventList</string>

</resources>
