<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/background_gradient">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">

        <TextView android:text="@string/app_name" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textIsSelectable="false"
            android:id="@+id/title_main"
            android:layout_margin="10dp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/label_main_username"
            android:id="@+id/label_main_username"
            android:layout_margin="10dp"
            android:textSize="@dimen/abc_text_size_medium_material" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/input_username"
            android:layout_margin="10dp"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/input_password_label"
            android:id="@+id/textView3"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_margin="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/input_password"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/login_error_msg"
            android:id="@+id/label_error_login"
            android:layout_gravity="left"
            android:textColor="#ffcc0000"
            android:textSize="@dimen/input_label"
            android:visibility="invisible" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_forgot_password"
            android:id="@+id/btn_forgot_password"
            android:textSize="@dimen/abc_text_size_button_material"
            android:layout_margin="10dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp">

            <Button
                android:layout_width="@dimen/btn_default"
                android:layout_height="wrap_content"
                android:text="@string/btn_register"
                android:id="@+id/btn_register"
                android:textSize="@dimen/abc_text_size_button_material" />

            <Button
                android:layout_width="@dimen/btn_default"
                android:layout_height="wrap_content"
                android:text="@string/btn_login"
                android:id="@+id/btn_login"
                android:textSize="@dimen/abc_text_size_button_material" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
