<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.georgicaracu.thehiddencampus.MainMenu"
    android:background="@drawable/background_gradient">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/img_saved_events"
                    android:layout_margin="@dimen/menu_item_margin"
                    android:src="@drawable/disksave_small"
                    android:contentDescription="disk save" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/menu_item_saved"
                    android:id="@+id/menu_item_saved_events"
                    android:textSize="@dimen/abc_text_size_headline_material"
                    android:layout_margin="@dimen/menu_item_margin" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/img_find_events"
                    android:layout_margin="@dimen/menu_item_margin"
                    android:src="@drawable/magnifier"
                    android:contentDescription="@string/accessibility_find_event" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_item_find_events"
                    android:id="@+id/label_find_events"
                    android:layout_margin="@dimen/menu_item_margin"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/abc_text_size_headline_material" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageButton3"
                    android:layout_margin="@dimen/menu_item_margin"
                    android:src="@drawable/pen" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/label_create_event"
                    android:id="@+id/menu_item_create_event"
                    android:layout_margin="@dimen/menu_item_margin"
                    android:textSize="@dimen/abc_text_size_headline_material" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/img_past_events"
                    android:layout_margin="@dimen/menu_item_margin"
                    android:src="@drawable/clock" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/menu_item_past_events"
                    android:id="@+id/menu_item_past_events"
                    android:layout_margin="@dimen/menu_item_margin"
                    android:textSize="@dimen/abc_text_size_headline_material" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/image_view_map"
                    android:layout_margin="@dimen/menu_item_margin"
                    android:src="@drawable/globe" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/menu_item_view_map"
                    android:id="@+id/menu_item_view_map"
                    android:layout_margin="@dimen/menu_item_margin"
                    android:textSize="@dimen/abc_text_size_headline_material" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/img_notofications"
                    android:layout_margin="@dimen/menu_item_margin"
                    android:src="@drawable/envelope" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/menu_item_notifications"
                    android:id="@+id/menu_item_notifications"
                    android:layout_margin="@dimen/menu_item_margin"
                    android:textSize="@dimen/abc_text_size_headline_material" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="\?"
                    android:id="@+id/button"
                    android:layout_margin="@dimen/menu_item_margin" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_logout"
                    android:id="@+id/button2"
                    android:layout_margin="@dimen/menu_item_margin" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
